<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/frontEpicImageButton"
        android:onClick="goToFrontEpic"
        android:background="@android:color/transparent"
        android:src="@drawable/logo"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/title"
        android:padding="8dp"
        android:textColor="#ddd"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/questionTextView"
        android:text="@string/question0"
        android:textColor="#ddd"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/true_button"
            android:text="@string/true_text"
            android:textColor="#222"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/false_button"
            android:text="@string/false_text"
            android:textColor="#222"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/previous_button"
            android:src="@drawable/baseline_chevron_left_black_18dp"
            android:contentDescription="@string/previous_text"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/next_button"
            android:src="@drawable/baseline_keyboard_arrow_right_black_18dp"
            android:contentDescription="@string/next_text"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>